--- a/src/components/panels/Response.scss
+++ b/src/components/panels/Response.scss
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 0.875rem;
-  height: 36px;
+  height: 42px;
   border-bottom: 1px solid $burning;
   background: rgba(0, 0, 0, 0.15);
   flex-shrink: 0;
